--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "elliptic": "6.5.3",
     "http-proxy": "^1.18.1",
     "node-forge": "^0.10.0",
+    "object-path": "^0.11.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
