--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^7.1.2",
     "elliptic": "6.5.3",
     "http-proxy": "^1.18.1",
+    "ini": "^1.3.6",
+    "lodash": "^4.17.19",
     "node-forge": "^0.10.0",
+    "node-notifier": "^8.0.1",
     "object-path": "^0.11.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
